<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/grey"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textShow"
        android:layout_width="378dp"
        android:layout_height="140dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/Text" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="380dp"
        android:layout_height="321dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textShow"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:id="@+id/Row1"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:orientation="horizontal">

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="AC"
                android:textColor="@android:color/holo_orange_light" />

            <Button
                android:id="@+id/BtClear"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="clear" />

            <Button
                android:id="@+id/btBaifen"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/Baifen" />

            <Button
                android:id="@+id/btDivides"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="114dp"
                android:layout_height="60dp"
                android:text="@string/DIVIDES" />

        </TableRow>

        <TableRow
            android:id="@+id/Row2"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <Button
                android:id="@+id/Nub7"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/Nub_7" />

            <Button
                android:id="@+id/Nub8"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/Nub_8" />

            <Button
                android:id="@+id/Nub9"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/Nub_9" />

            <Button
                android:id="@+id/btMultiply"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/MULTIPLY" />

        </TableRow>

        <TableRow
            android:id="@+id/Row3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/Nub4"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/Nub_4" />

            <Button
                android:id="@+id/Nub5"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/Nub_5" />

            <Button
                android:id="@+id/Nub6"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/Nub_6" />

            <Button
                android:id="@+id/btMinus"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/MINUS" />

        </TableRow>

        <TableRow
            android:id="@+id/Row4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/Nub1"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/Nub_1" />

            <Button
                android:id="@+id/Nub2"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/Nub_2" />

            <Button
                android:id="@+id/Nub3"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/Nub_3" />

            <Button
                android:id="@+id/NubAdd"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/ADD" />

        </TableRow>

        <TableRow
            android:id="@+id/Row5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="60dp" />

            <Button
                android:id="@+id/Nub0"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/Nub_0" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/Point" />

            <Button
                android:id="@+id/NubEqul"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/Equal" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="27dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="285dp"
        tools:layout_editor_absoluteY="39dp" />
</android.support.constraint.ConstraintLayout>